<resources>

    <string name="date_format">dd.MM.yy</string>
    <string name="time_format">HH:mm</string>
    <string name="app_name">Smart Meetings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="startscreen_welcome">Your reservations:</string>
    <string name="startscreen_search">Search a room</string>
    <string name="startscreen_all">All rooms</string>
    <string name="startscreen_no_reservations">You have not reserved a room.</string>
    <string name="menu_reservation_remove">Cancel reservation</string>
    <string name="menu_reservation_login">Log in on place</string>
    <string name="menu_reservation_logout">Log off</string>
    <string name="title_activity_smart_meetings_start">Smart Meetings</string>
    <string name="room_list_loading">Please wait, the list is still loading.</string>
    <string name="room_list_headline">You can see all rooms here.</string>
    <string name="building_list_headline">Select a building to view all of its rooms.</string>
    <string name="room_properties_loading">Loading room properties.</string>
    <string name="search">Search room</string>
    <string name="search_headline">Select the properties your room should have.</string>
    <string name="search_submit">Search</string>
    <string name="results_headline">Results</string>
    <string name="room_details_properties">Additional properties:</string>
    <string name="room_details_navigate_to">Navigate to room</string>
    <string name="room_details_book">Book room</string>
    <string name="reserve_room_headline">Add new Reservation for this room</string>
    <string name="reserve_room_startdate">Start time</string>
    <string name="reserve_room_enddate">End time</string>
    <string name="reserve_room_abort">Abort</string>
    <string name="reserve_room_ok">Book the room</string>
    <string name="reserve_room_success">The room is reserved for you.</string>
    <string name="reserve_room_fail">The room could not be reserved.</string>
    <string name="reservation_item_loggedin">You logged in</string>
    <string name="reservation_item_login">Log in</string>
    <string name="reservation_item_logoff">Log off</string>
    <string name="login_successful">You logged in to the room.</string>
    <string name="login_failed">Your login was rejected.</string>
    <string name="scan_headline">Hold your device on the NFC Tag to read it.</string>
    <string name="scan_qr">Use a QR-Code instead</string>
    <string name="scan_abort">Abort</string>
    <string name="help_start">You can see the rooms you have reserved, search a new room to reserve or edit a reservation by long-clicking on a reservation.</string>
    <string name="help_search">Select the properties the room you are searching for should have.</string>
    <string name="help_room_details">Select a room in the list to display its properties and reserve the room for you or navigate to it.</string>
    <string name="help_buildings">Select a building to view its details and a list of its rooms.</string>
    <string name="share_reservation_fail">Couldn\'t share the reservation via google+</string>
    <string name="share_reservation_success">google+ has been opened successfully</string>
    <string name="category_reservations">Reservations</string>
    <string name="category_discussions">Discussions</string>
    <string name="menu_scan_exercise">Scan object</string>
    <string name="discussion_post_hint">Enter your message</string>
    <string name="discussion_remove">Remove discussion</string>
    <string name="enable_sensing_headline">Do you allow SmartMeetings to use your device for retrieving information about the indoor climate?</string>
    <string name="refreshRate">Refresh rate (seconds):</string>
    <string name="sensing_started">Sensing  started.</string>
    <string name="sensing_terminated">Sensing terminated.</string>
    <string name="no_sensors">This device does not contain any environment sensors.</string>
    <string name="publishing_failed">Sensor data publishing failed.</string>
    <string name="default_refresh_rate">60</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="send_room">Share reservation to discussion</string>
    <string name="select_room">Select room</string>
    <string name="room_logoff_confirm">Do you want to leave this room?</string>
    <string name="general_properties_caption">General:</string>
    <string name="number_of_seats">seats</string>
    <string name="square_meters">m²</string>
    <string name="rooms_in_building">Rooms in this building:</string>
    <string name="build_year">Build year: %s\n</string>
    <string name="building_navigate_to">Navigate to building</string>
    <string name="menu_reservation_share">Share to Google+</string>
    <string name="logoff_successful">Log off successful</string>
    <string name="logoff_failed">Log off failed</string>
    <string name="filter">Filter list</string>
    <string name="discuss">Discuss this</string>
    <string name="create_discussion">Create an ad-hoc discussion</string>
    <string name="create">Create</string>
    <string name="name_discussion">Name the new discussion</string>
    <string name="name_not_valid">Name is not valid.</string>
    <string name="share_discussion">Let the recipient scan this QR code or use NFC to share the discussion.</string>
    <string name="share">Share</string>
    <string name="reload">Reload</string>
    <string name="enable_notification">Enable notifications</string>
    <string name="notification_enabled">Notifications enabled for %s.</string>
    <string name="notification_disabled">Notifications disabled for %s.</string>
    <string name="pref_cat_notification">Notifications</string>
    <string name="pref_notification">Enable notifications by default</string>
    <string name="pref_notificationSound">Notification sound</string>
    <string name="pref_notificationSound_desc">Sound to play when displaying a notification.</string>
    <string name="pref_notificationSound_intent">Choose a sound</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_desc">Vibrate when displaying a notification.</string>
    <string name="notification_new_post_title">New post in %s.</string>

</resources>