<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_cat_notifications"
        android:title="@string/pref_cat_notification" >
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_notifications"
            android:title="@string/pref_notification" >
        </CheckBoxPreference>

        <Preference
            android:dependency="pref_notifications"
            android:key="pref_notificationSound"
            android:summary="@string/pref_notificationSound_desc"
            android:title="@string/pref_notificationSound" >
        </Preference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_notifications"
            android:key="pref_vibrate"
            android:summary="@string/pref_vibrate_desc"
            android:title="@string/pref_vibrate" >
        </CheckBoxPreference>
    </PreferenceCategory>

</PreferenceScreen>