<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_sensing_headline"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:src="@android:drawable/divider_horizontal_bright" />
    
    <TextView
        android:id="@+id/refreshRateHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refreshRate" />

    <EditText
        android:id="@+id/editRefreshRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_refresh_rate" >

        <requestFocus />
    </EditText>

</LinearLayout>