<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/refreshRateHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startscreen_welcome"
        android:textAppearance="?android:attr/textAppearanceMedium" android:layout_margin="5sp"/>

    <ListView
        android:id="@+id/startscreen_bookings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/startscreen_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/startscreen_search" />

        <Button
            android:id="@+id/startscreen_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/startscreen_all" />
    </LinearLayout>

</LinearLayout>